--- a/3.0.md
+++ b/3.0.md
@@ -1,3 +1,13 @@
+###### Checklist:
+
+[ ] Set a global URL
+[ ] `connected_state` => `connected?`
+[ ] `auth` no longer calls `cancel` block
+[ ] `unauth` => `logout`
+[ ] `auth_state` => `authenticated?`
+[ ] `on_auth` => `authenticated?`
+[ ] FirebaseSimpleLogin is GONE
+
 ###### Added the ability to set a global URL
 
 `Firebase.url = 'your-app-name'`
