ahh, 'auth' is an internal method

--- a/3.0.md
+++ b/3.0.md
@@ -20,7 +20,7 @@ This is required if you want to use the static methods like `Firebase.connected?
 `connected?`, which accepts a block.  Instead of a snapshot, this block will
 receive a boolean (`is_connected`).
 
-###### Firebase.auth
+###### Firebase.authenticate
 
 This method used to call `authWithCredential(withCompletionBlock:withCancelBlock:)`,
 but that method has been deprecated in favor of `authWithCustomToken(withCompletionBlock:)`.
@@ -30,7 +30,7 @@ The new method uses just one block.  You should update your code to accept
 authenticated state.
 
 ```ruby
-Firebase.auth { |error, auth_data| }
+Firebase.authenticate(token) { |error, auth_data| }
 ```
 
 ###### Firebase.unauth
