--- a/3.4.md
+++ b/3.4.md
@@ -1,8 +1,8 @@
 ###### Checklist:
 
-[x] Use with new Google SDK
-[ ] Test login (facebook, github, twitter)
-[ ] Fix demo app
+- [x] Use with new Google SDK
+- [ ] Test login (facebook, github, twitter)
+- [ ] Fix demo app
 
 
 
